Tests and minor corrections.

--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -66,7 +66,7 @@ en:
     personal_key_header_text: Enter your personal key
     personal_key_prompt: You can use this personal key once. After you enter it, you'll
       be provided a new key.
-    backup_code_header_text: Enter your security code
+    backup_code_header_text: Enter your backup security code
     backup_code_prompt: You can use this security code once. After you enter it, you'll
       need to use a new key.
     phone:
