--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -3,6 +3,19 @@ en:
   forms:
     account_recovery_setup:
       legend: Select a secondary authentication option
+    backup_code:
+      download: Download, print or write down your backup codes.
+      generate: Generate new backup codes
+      generate_info: When you generate new codes, you must download or print them.
+        Your old codes won't work anymore.
+      info: Use backup codes if you cannot access your phone to sign in
+      instructions: You will be asked for a backup code each time you sign in to your
+        login.gov account.
+      subinfo1: Each code may only be used once, once the 9th code has been used you
+        will be prompted to download a new list.  Treat your recovery codes with the
+        same level of attention as you would your password.
+      subtitle1: Your backup codes
+      title: Backup Codes
     buttons:
       back: Back
       cancel: Yes, cancel
@@ -35,19 +48,6 @@ en:
       instructions: Please confirm you have a copy of your personal key by entering
         it below.
       title: Enter your personal key
-    backup_code:
-      title: Backup Codes
-      info: Use backup codes if you cannot access your phone to sign in
-      instructions: You will be asked for a backup code each time you sign in
-        to your login.gov account.
-      subtitle1: Your backup codes
-      subinfo1: Each code may only be used once, once the 9th code has been
-        used you will be prompted to download a new list.  Treat your recovery
-        codes with the same level of attention as you would your password.
-      download: Download, print or write down your backup codes.
-      generate: Generate new backup codes
-      generate_info: When you generate new codes, you must download or print them.
-        Your old codes won't work anymore.
     phone:
       buttons:
         delete: Remove Phone
@@ -91,9 +91,9 @@ en:
       totp_step_2: Enter this key in the app
       totp_step_3: Enter the code from the app
     two_factor:
+      backup_code: Security code
       code: One-time security code
       personal_key: Personal key
-      backup_code: Security code
       try_again: Use another phone number
     two_factor_choice:
       legend: Select an option to secure your account
