--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -1,7 +1,22 @@
+---
 es:
   forms:
     account_recovery_setup:
       legend: Selecciona una opción de autenticación secundaria
+    backup_code:
+      download: Descargue, imprima o anote sus códigos de seguridad personales.
+      generate: Generar nuevos códigos de respaldo.
+      generate_info: When you generate new codes, you must download or print them.
+        Your old codes won't work anymore.
+      info: Use códigos de inicio de sesión si no puede acceder a su teléfono para
+        iniciar sesión
+      instructions: Se le pedirá un código de inicio de sesión cada vez que inicie
+        sesión. a su cuenta login.gov.
+      subinfo1: Each code may only be used once, once the 9th code has been used you
+        will be prompted to download a new list.  Treat your recovery codes with the
+        same level of attention as you would your password.
+      subtitle1: Tus códigos de respaldo
+      title: Códigos de respaldo
     buttons:
       back: Atrás
       cancel: Sí, cancelar
@@ -34,19 +49,6 @@ es:
       instructions: Confirme que tiene una copia de su clave personal ingresándola
         a continuación.
       title: Ingrese su clave personal
-    backup_code:
-      title: Códigos de respaldo
-      info: Use códigos de inicio de sesión si no puede acceder a su teléfono para iniciar sesión
-      instructions: Se le pedirá un código de inicio de sesión cada vez que inicie sesión.
-        a su cuenta login.gov.
-      subtitle1: Tus códigos de respaldo
-      subinfo1: Each code may only be used once, once the 9th code has been
-        used you will be prompted to download a new list.  Treat your recovery
-        codes with the same level of attention as you would your password.
-      download: Descargue, imprima o anote sus códigos de seguridad personales.
-      generate: Generar nuevos códigos de respaldo.
-      generate_info: When you generate new codes, you must download or print them.
-        Your old codes won't work anymore.
     phone:
       buttons:
         delete: Eliminar el teléfono
@@ -91,9 +93,9 @@ es:
       totp_step_2: Ingrese esta clave en la app.
       totp_step_3: Ingrese el código de la app.
     two_factor:
+      backup_code: Código de seguridad
       code: Código de seguridad de sólo un uso
       personal_key: Clave personal
-      backup_code: Código de seguridad
       try_again: Use otro número de teléfono.
     two_factor_choice:
       legend: Seleccione una opción para proteger su cuenta
