--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -3,6 +3,20 @@ fr:
   forms:
     account_recovery_setup:
       legend: Sélectionnez une option d'authentification secondaire
+    backup_code:
+      download: Téléchargez, imprimez ou notez vos codes de sauvegarde.
+      generate: Générer de nouveaux codes de sauvegarde
+      generate_info: When you generate new codes, you must download or print them.
+        Your old codes won't work anymore.
+      info: Utiliser les codes de connexion si vous ne pouvez pas accéder à votre
+        téléphone pour vous connecter
+      instructions: Un code de connexion vous sera demandé chaque fois que vous vous
+        connecterez. sur votre compte login.gov.
+      subinfo1: Each code may only be used once, once the 9th code has been used you
+        will be prompted to download a new list.  Treat your recovery codes with the
+        same level of attention as you would your password.
+      subtitle1: Vos codes de sauvegarde
+      title: Codes de sauvegarde
     buttons:
       back: Retour
       cancel: Oui, annuler
@@ -35,19 +49,6 @@ fr:
       instructions: Veuillez confirmer que vous avez une copie de votre clé personnelle
         en l'entrant ci-dessous.
       title: Entrez votre clé personnelle
-    backup_code:
-      title: Codes de sauvegarde
-      info: Utiliser les codes de connexion si vous ne pouvez pas accéder à votre téléphone pour vous connecter
-      instructions: Un code de connexion vous sera demandé chaque fois que vous vous connecterez.
-        sur votre compte login.gov.
-      subtitle1: Vos codes de sauvegarde
-      subinfo1: Each code may only be used once, once the 9th code has been
-        used you will be prompted to download a new list.  Treat your recovery
-        codes with the same level of attention as you would your password.
-      download: Téléchargez, imprimez ou notez vos codes de sauvegarde.
-      generate: Générer de nouveaux codes de sauvegarde
-      generate_info: When you generate new codes, you must download or print them.
-        Your old codes won't work anymore.
     phone:
       buttons:
         delete: Supprimer le numéro de teléfono
@@ -98,9 +99,9 @@ fr:
       totp_step_2: Entrez cette clé dans l'application
       totp_step_3: Entrez le code à partir de l'application
     two_factor:
+      backup_code: Code de sécurité
       code: Code de sécurité
       personal_key: Clé personnelle
-      backup_code: Code de sécurité
       try_again: Utilisez un autre numéro de téléphone
     two_factor_choice:
       legend: Sélectionnez une option pour sécuriser votre compte
