--- a/config/locales/users/es.yml
+++ b/config/locales/users/es.yml
@@ -1,6 +1,9 @@
 ---
 es:
   users:
+    backup_code:
+      generated_on_html: Generated on %{date}
+      header: Your backup code
     delete:
       actions:
         cancel: Anular y regresar a su perfil
