--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -5,9 +5,8 @@ en:
       actions:
         cancel: Cancel and return to your profile
         delete: Delete account
-      bullet_1: You won't have a %{app} account.
-      bullet_2_loa1: "%{app} will delete your email address, password, and phone number
-        from our system."
+      bullet_1: You won't have a %{app} account
+      bullet_2_loa1: We'll delete your email address, password, and phone number
       bullet_2_loa3: "%{app} will delete your email address, password, phone number,
         name, address, date of birth and Social Security number from our system."
       bullet_3: You won't be able to securely access your information using %{app}.
