--- a/config/locales/users/fr.yml
+++ b/config/locales/users/fr.yml
@@ -6,8 +6,7 @@ fr:
         cancel: Annuler et retourner à votre profil
         delete: Supprimer le compte
       bullet_1: Vous n'aurez pas de compte %{app}.
-      bullet_2_loa1: "%{app} supprimera votre adresse e-mail, votre mot de passe et
-        votre numéro de téléphone de notre système."
+      bullet_2_loa1: Nous effacerons votre adresse email, votre mot de passe et votre numéro de téléphone
       bullet_2_loa3: "%{app} supprimera votre adresse e-mail, votre mot de passe et
         votre numéro de téléphone, votre nom, votre adresse, votre date de naissance
         et votre numéro de sécurité sociale de notre système."
