--- a/config/locales/openid_connect/es.yml
+++ b/config/locales/openid_connect/es.yml
@@ -4,6 +4,7 @@ es:
     authorization:
       errors:
         bad_client_id: Bad client_id
+        no_auth: Los acr_values no están autorizados
         no_valid_acr_values: acr_valores encontrados no aceptables
         no_valid_scope: No se han encontrado valores de magnitud válidos
         redirect_uri_invalid: Redirect_uri no es válido
