LG-752 Verify by mail undeliverable as addressed processing
Why: We need to track whether a user has an undeliverable address when they attempt to verify by mail.

How: Download the USPS undeliverable address otp/codes from their sftp site daily.  Add a bounced_at field to usps_confirmation_codes and add an index on otp fingerprint.  For each code find the entry by otp fingerprint, set the bounced_at timestamp, and send an email notification to the user.  Use locking to prevent a user from being notified twice.

--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -102,3 +102,8 @@ en:
         you can ignore this message.
       link_text: Go to %{app}
       reset_password: If you can't remember your password, go to %{app} to reset it.
+    undeliverable_address:
+      call_to_action: Please sign in to login.gov and follow instructions.
+      help: ''
+      intro: We were unable to send mail to the address you provided.
+      subject: Mail sent to your address was undeliverable
