--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -3,6 +3,15 @@ en:
   forms:
     account_recovery_setup:
       legend: Select a secondary authentication option
+    backup_code:
+      info: Use backup codes if you cannot access your phone to sign in
+      instructions: You will be asked for a backup code each time you sign in to your
+        login.gov account.
+      subinfo1: Each code may only be used once, once the 9th code has been used you
+        will be prompted to download a new list.  Treat your recovery codes with the
+        same level of attention as you would your password.
+      subtitle1: Your backup codes
+      title: Backup Codes
     buttons:
       back: Back
       cancel: Yes, cancel
@@ -78,6 +87,7 @@ en:
       totp_step_2: Enter this key in the app
       totp_step_3: Enter the code from the app
     two_factor:
+      backup_code: Security code
       code: One-time security code
       personal_key: Personal key
       try_again: Use another phone number
