--- a/config/locales/two_factor_authentication/es.yml
+++ b/config/locales/two_factor_authentication/es.yml
@@ -11,11 +11,17 @@ es:
         ha sido cancelada.
       text_html: Si no puede usar ninguna de estas opciones de seguridad anteriores,
         puede restablecer tus preferencias por %{link}.
+    backup_code_fallback:
+      question: Don't have your backup codes available?
+    backup_code_header_text: Enter your backup security code
+    backup_code_prompt: You can use this security code once. After you enter it, you'll
+      need to use a new key.
     choose_another_option: "‹ Elige otra opción"
     header_text: Ingrese su código de seguridad
     invalid_otp: Ese código de seguridad no es válido. Puede intentar ingresarlo de
       nuevo o solicitar un nuevo código de seguridad de sólo un uso.
     invalid_personal_key: Esa clave personal no es válida.
+    invalid_backup_code: Esa código de respaldo no es válida.
     invalid_piv_cac: Esa PIV/CAC no es correcta.
     login_intro: Usted configuró esto cuando creó su cuenta
     login_options:
@@ -95,6 +101,9 @@ es:
       auth_app: Aplicación de autenticación
       auth_app_info: Configure una aplicación de autenticación para obtener su código
         de seguridad sin proporcionar un número de teléfono
+      backup_code: Códigos de seguridad personal
+      backup_code_info: Reciba una lista generada previamente de códigos de seguridad
+        para usar al iniciar sesión
       piv_cac: Empleados del Gobierno
       piv_cac_info: Use su tarjeta PIV / CAC para asegurar su cuenta
       sms: Mensaje de texto / SMS
