--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -1,6 +1,9 @@
 ---
 en:
   users:
+    backup_code:
+      generated_on_html: Generated on %{date}
+      header: Your backup code
     delete:
       actions:
         cancel: Cancel and return to your profile
