--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -5,13 +5,19 @@ en:
       legend: Select a secondary authentication option
     backup_code:
       info: Use backup codes if you cannot access your phone to sign in
-      instructions: You will be asked for a backup code each time you sign in to your
-        login.gov account.
+      instructions: You will be asked for a backup code <strong>each time you sign
+        in</strong> to your login.gov account.
+      new_codes: Generate new codes
+      new_info: When you generate new codes, you must download or print them. Your
+        old codes won't work anymore.
+      new_login_codes: Generate new login codes
+      print: Print
       subinfo1: Each code may only be used once, once the 9th code has been used you
         will be prompted to download a new list.  Treat your recovery codes with the
         same level of attention as you would your password.
       subtitle1: Your backup codes
       title: Backup Codes
+      warn: Download, print, or write down your personal security codes.
     buttons:
       back: Back
       cancel: Yes, cancel
