--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -8,11 +8,17 @@ es:
         iniciar sesión
       instructions: Se le pedirá un código de inicio de sesión cada vez que inicie
         sesión. a su cuenta login.gov.
+      new_codes: Generar nuevos códigos
+      new_info: Cuando genera nuevos códigos, debe descargarlos o imprimirlos. Tus
+        viejos códigos ya no funcionarán.
+      new_login_codes: Generar nuevos códigos de inicio de sesión
+      print: Impresión
       subinfo1: Each code may only be used once, once the 9th code has been used you
         will be prompted to download a new list.  Treat your recovery codes with the
         same level of attention as you would your password.
       subtitle1: Tus códigos de respaldo
       title: Códigos de respaldo
+      warn: Descargue, imprima o escriba sus códigos de seguridad personales.
     buttons:
       back: Atrás
       cancel: Sí, cancelar
