--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -8,11 +8,17 @@ fr:
         téléphone pour vous connecter
       instructions: Un code de connexion vous sera demandé chaque fois que vous vous
         connecterez. sur votre compte login.gov.
+      new_codes: Générer de nouveaux codes
+      new_info: Lorsque vous générez de nouveaux codes, vous devez les télécharger
+        ou les imprimer. Vos anciens codes ne fonctionneront plus.
+      new_login_codes: Générer de nouveaux codes de connexion
+      print: Impression
       subinfo1: Each code may only be used once, once the 9th code has been used you
         will be prompted to download a new list.  Treat your recovery codes with the
         same level of attention as you would your password.
       subtitle1: Vos codes de sauvegarde
       title: Codes de sauvegarde
+      warn: Téléchargez, imprimez ou notez vos codes de sécurité personnels.
     buttons:
       back: Retour
       cancel: Oui, annuler
