--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -12,9 +12,9 @@ en:
         old codes won't work anymore.
       new_login_codes: Generate new login codes
       print: Print
-      subinfo1: Each code may only be used once, once the 9th code has been used you
-        will be prompted to download a new list.  Treat your recovery codes with the
-        same level of attention as you would your password.
+      subinfo1: Cada código solo se puede utilizar una vez, una vez que se haya utilizado
+        el décimo código, se le pedirá que descargue una nueva lista. Trate sus códigos
+        de recuperación con el mismo nivel de atención como lo haría con su contraseña.
       subtitle1: Your backup codes
       title: Backup Codes
       warn: Download, print, or write down your personal security codes.
