--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -13,9 +13,9 @@ fr:
         ou les imprimer. Vos anciens codes ne fonctionneront plus.
       new_login_codes: Générer de nouveaux codes de connexion
       print: Impression
-      subinfo1: Each code may only be used once, once the 9th code has been used you
-        will be prompted to download a new list.  Treat your recovery codes with the
-        same level of attention as you would your password.
+      subinfo1: Chaque code ne peut être utilisé qu'une seule fois. Une fois le code
+        10 utilisé, vous serez invité à télécharger une nouvelle liste. Traitez vos
+        codes de récupération avec le même niveau d’attention que votre mot de passe.
       subtitle1: Vos codes de sauvegarde
       title: Codes de sauvegarde
       warn: Téléchargez, imprimez ou notez vos codes de sécurité personnels.
