--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -13,10 +13,10 @@ es:
         viejos códigos ya no funcionarán.
       new_login_codes: Generar nuevos códigos de inicio de sesión
       print: Impresión
-      subinfo1: Cada código solo se puede utilizar una vez, una vez que se haya utilizado
+      subinfo: Cada código solo se puede utilizar una vez, una vez que se haya utilizado
         el décimo código, se le pedirá que descargue una nueva lista. Trate sus códigos
         de recuperación con el mismo nivel de atención como lo haría con su contraseña.
-      subtitle1: Tus códigos de respaldo
+      subtitle: Tus códigos de respaldo
       title: Códigos de respaldo
       warn: Descargue, imprima o escriba sus códigos de seguridad personales.
     buttons:
