--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -12,9 +12,9 @@ en:
         old codes won't work anymore.
       new_login_codes: Generate new login codes
       print: Print
-      subinfo: Each code may only be used once, once the 10th code has been used
-        you will be prompted to download a new list.  Treat your recovery codes with
-        the same level of attention as you would your password.
+      subinfo: Each code may only be used once, once the 10th code has been used you
+        will be prompted to download a new list.  Treat your recovery codes with the
+        same level of attention as you would your password.
       subtitle: Your backup codes
       title: Backup Codes
       warn: Download, print, or write down your personal security codes.
