LG-848 Document authentication flow modifications (#2688)
**Why**: To enhance our mobile and desktop experiences and remove existing selfie matching in favor of new technology scheduled for subsequent releases.

**How**: Remove the selfie matching step.  Place the ssn check at the end of the flow.  Initiate the document authentication flow with clear instructions for mobile and desktop users.  A future release will provide the hybrid flow for a user starting on desktop, taking a photo on their phone, and finishing on desktop.

--- a/config/locales/doc_auth/en.yml
+++ b/config/locales/doc_auth/en.yml
@@ -2,10 +2,8 @@
 en:
   doc_auth:
     buttons:
-      capture: Capture
       start_over: Start over
     errors:
-      selfie: Sorry, we are unable to match your picture, please try again.
       state_id_fail: Sorry. Information from your uploaded state-issued ID does not
         match information for your social security number.
     forms:
@@ -14,13 +12,16 @@ en:
       entered_info: 'Information you entered:'
       first_name: First Name
       last_name: Last Name
-      selfie_next: Next, we'll need to take your picture.
+      option_1: 'Desktop computer users: You need a scanned copy of your id. If you
+        do not have one please sign in from a mobile phone.'
+      option_2: 'Mobile phone users: You can use your camera or photos from your camera
+        roll.'
       ssn: Social Security Number
       state_id_info: 'Information from your uploaded state-issued ID:'
     headings:
-      selfie: Take a selfie!
-      ssn: To verify your identity, you'll need your social security number and state-issued
-        ID.
+      intro: To verify your identity, you'll need your social security number and
+        state-issued ID.
+      ssn: Please enter your social security number.
       upload_back: Please upload a photo of the back of your state-issued ID.
       upload_front: Please upload a photo of the front of your state-issued ID.
     titles:
