--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -2,10 +2,8 @@
 es:
   doc_auth:
     buttons:
-      capture: Capturar
       start_over: Comenzar de nuevo
     errors:
-      selfie: Lo sentimos, no podemos hacer coincidir su imagen, intente de nuevo.
       state_id_fail: Lo siento. La información de su ID emitida por el estado no coincide
         con la información de su número de seguro social.
     forms:
@@ -15,13 +13,16 @@ es:
       entered_info: 'Información que ingresó:'
       first_name: Nombre de pila
       last_name: Apellido
-      selfie_next: A continuación, necesitaremos tomar su foto.
+      option_1: 'Usuarios de computadoras de escritorio: necesita una copia escaneada
+        de su identificación. Si no tiene uno, inicie sesión desde un teléfono móvil.'
+      option_2: 'Usuarios de teléfonos móviles: puede usar su cámara o fotos de su
+        rollo de cámara.'
       ssn: Número de seguridad social
       state_id_info: 'Información de su ID emitida por el estado:'
     headings:
-      selfie: "¡Toma una selfie!"
-      ssn: Para verificar su identidad, necesitará su número de seguro social y su
-        identificación emitida por el estado.
+      intro: Para verificar su identidad, necesitará su número de seguro social y
+        una identificación emitida por el estado.
+      ssn: Por favor ingrese su número de seguro social.
       upload_back: Cargue una foto del dorso de su identificación emitida por el estado.
       upload_front: Cargue una foto del frente de su identificación emitida por el
         estado.
