--- a/config/locales/users/fr.yml
+++ b/config/locales/users/fr.yml
@@ -2,8 +2,7 @@
 fr:
   users:
     backup_code:
-      generated_on_html: Generated on %{date}
-      header: Your backup code
+      generated_on_html: Généré le %{date}
     delete:
       actions:
         cancel: Annuler et retourner à votre profil
