--- a/config/locales/users/es.yml
+++ b/config/locales/users/es.yml
@@ -2,8 +2,7 @@
 es:
   users:
     backup_code:
-      generated_on_html: Generated on %{date}
-      header: Your backup code
+      generated_on_html: Generado el %{date}
     delete:
       actions:
         cancel: Anular y regresar a su perfil
