--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -4,6 +4,7 @@ en:
     account_recovery_setup:
       legend: Select a secondary authentication option
     backup_code:
+      download: Download
       info: Use backup codes if you cannot access your phone to sign in
       instructions: You will be asked for a backup code <strong>each time you sign
         in</strong> to your login.gov account.
