--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -4,6 +4,7 @@ es:
     account_recovery_setup:
       legend: Selecciona una opción de autenticación secundaria
     backup_code:
+      download: Descargar
       info: Use códigos de inicio de sesión si no puede acceder a su teléfono para
         iniciar sesión
       instructions: Se le pedirá un código de inicio de sesión cada vez que inicie
