--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -3,6 +3,23 @@ es:
   forms:
     account_recovery_setup:
       legend: Selecciona una opción de autenticación secundaria
+    backup_code:
+      download: Descargar
+      info: Use códigos de inicio de sesión si no puede acceder a su teléfono para
+        iniciar sesión
+      instructions: Se le pedirá un código de inicio de sesión cada vez que inicie
+        sesión. a su cuenta login.gov.
+      new_codes: Generar nuevos códigos
+      new_info: Cuando genera nuevos códigos, debe descargarlos o imprimirlos. Tus
+        viejos códigos ya no funcionarán.
+      new_login_codes: Generar nuevos códigos de inicio de sesión
+      print: Impresión
+      subinfo: Cada código solo se puede utilizar una vez, una vez que se haya utilizado
+        el décimo código, se le pedirá que descargue una nueva lista. Trate sus códigos
+        de recuperación con el mismo nivel de atención como lo haría con su contraseña.
+      subtitle: Tus códigos de respaldo
+      title: Códigos de respaldo
+      warn: Descargue, imprima o escriba sus códigos de seguridad personales.
     buttons:
       back: Atrás
       cancel: Sí, cancelar
@@ -79,6 +96,7 @@ es:
       totp_step_2: Ingrese esta clave en la app.
       totp_step_3: Ingrese el código de la app.
     two_factor:
+      backup_code: Código de seguridad
       code: Código de seguridad de sólo un uso
       personal_key: Clave personal
       try_again: Use otro número de teléfono.
