LG-794 Audit devices, IP addresses Users are Authenticating With
**Why**: To enhance security for our users

**How**: Add new tables for devices and device events.  Store a long lived cookie with a uuid which along with user id will be used as the lookup key to the device. Note that this cookie can be shared across multiple users of a device.  Have the device store the browser user agent.  When displaying the devices to the user use the user_agent_parser gem to parse the user agent into a user presentable string.  Add device tracking to each event we want to track.  If the cookie exists and its value is found for the user then update the device otherwise create one.  Cache the last_ip and last_used_at timestamp in the device table.  Create a device event for every event and mirror the old events table only now link ot to a device via device_id.  Add indexes to the tables to allow for pagination since devices or events per user can grow arbitrarily large.

--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -8,6 +8,7 @@ es:
       auth_app_disabled: no permitido
       auth_app_enabled: permitido
       authentication_app: App de autenticación
+      device: "%{browser} en %{os}"
       dob: Fecha de nacimiento
       email: Email
       full_name: Nombre completo
