--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -5,6 +5,8 @@ en:
       account_history: Account history
       account_management: Account Management
       connected_apps: Applications
+      devices: Devices
+      events: Events
       login_history: Login history
       login_info: Your account
       profile_info: Profile information
