--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -5,6 +5,8 @@ es:
       account_history: Historial de cuenta
       account_management: Manejo de cuenta
       connected_apps: Aplicaciones
+      devices: Dispositivos
+      events: Eventos
       login_history: Historial de sesión
       login_info: Su cuenta
       profile_info: Información de perfil
