--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -8,6 +8,7 @@ en:
       auth_app_disabled: not enabled
       auth_app_enabled: enabled
       authentication_app: Authentication app
+      device: "%{browser} on %{os}"
       dob: Date of birth
       email: Email address
       full_name: Full name
