--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -8,6 +8,7 @@ fr:
       auth_app_disabled: non activée
       auth_app_enabled: activée
       authentication_app: Application d'authentification
+      device: "%{browser} sur %{os}"
       dob: Date de naissance
       email: Adresse courriel
       full_name: Nom complet
