Added sign in events

--- a/config/locales/event_types/fr.yml
+++ b/config/locales/event_types/fr.yml
@@ -17,6 +17,8 @@ fr:
     phone_removed: Numéro de téléphone supprimé
     piv_cac_disabled: Carte PIV/CAC non associée
     piv_cac_enabled: Carte PIV/CAC associée
+    sign_in_before_2fa: Connecté avec mot de passe
+    sign_in_after_2fa: Signé avec deuxième facteur
     usps_mail_sent: Lettre envoyée
     webauthn_key_added: Clé de sécurité ajoutée
     webauthn_key_removed: Clé de sécurité retirée
