--- a/config/locales/event_types/es.yml
+++ b/config/locales/event_types/es.yml
@@ -17,6 +17,8 @@ es:
     phone_removed: Teléfono eliminado
     piv_cac_disabled: Tarjeta PIV/CAC no asociada
     piv_cac_enabled: Tarjeta PIV/CAC asociada
+    sign_in_before_2fa: Inicia sesión con contraseña
+    sign_in_after_2fa: Inicia sesión con segundo factor
     usps_mail_sent: Carta enviada
     webauthn_key_added: Clave de seguridad de hardware añadido
     webauthn_key_removed: Clave de seguridad de hardware eliminada
