[LG-872] Present confirmed phones when proofing
**Why**: As a user, I don't want to enter or have to confirm
a phone number I've already confirmed.

**How**: Present a selection if there are multiple phone
numbers confirmed for the account. If only one phone is
confirmed, then we preserve the current behavior of pre-filling
the phone field.

--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -85,6 +85,7 @@ en:
       first_name: First name
       last_name: Last name
       no_alternate_phone_html: 'No phone? No problem: %{link}'
+      other_phone: Other Phone Number
       password: Password
       phone: Phone Number
       ssn_label_html: Social Security Number
