--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -95,6 +95,7 @@ fr:
       first_name: Prénom
       last_name: Nom de famille
       no_alternate_phone_html: 'Pas de téléphone? aucun problème: %{link}'
+      other_phone: Autre numéro de téléphone
       password: Mot de passe
       phone: Numéro de téléphone
       ssn_label_html: Numéro de sécurité sociale
